# Audion

./: README.md  developerguide.md  package-lock.json  package.json  releasenote.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: beta-release.yml  koolarpan-release.yml  main.yml  test.yml
plugin-examples/: README.md
plugin-examples/discord-rich-presence/: index.js  plugin.json
plugin-examples/keyboard-shortcuts/: index.js  plugin.json
plugin-examples/now-playing-notifier/: index.js  plugin.json
plugin-examples/play-counter/: index.js  plugin.json
plugin-examples/qubuz-search/: index.js
plugin-examples/spotify-converter/: index.js  plugin.json
plugin-examples/theme-customizer/: index.js  plugin.json
plugin-examples/tidal-search/: index.js  plugin.json
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.dev.json  tauri.conf.json  tauri.conf.koolarpan.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: audion.toml
src-tauri/src/: audio.rs  discord.rs  lib.rs  security.rs
src-tauri/src/commands/: covers.rs  library.rs  lyrics.rs  metadata.rs  mod.rs  network.rs  playlist.rs  plugin.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/scanner/: cover_storage.rs  metadata.rs  walker.rs
src/lib/api/: tauri.ts
src/lib/components/: AlbumDetail.svelte  AlbumGrid.svelte  ArtistDetail.svelte  ArtistGrid.svelte  ContextMenu.svelte  FullScreenPlayer.svelte  GlobalShortcuts.svelte  KeyboardShortcutsHelp.svelte  LyricsPanel.svelte  MainView.svelte  MenuBar.svelte  MiniPlayer.svelte  MultiSelectTrackView.svelte  PlayerBar.svelte  PlaylistDetail.svelte  PlaylistView.svelte  PluginManager.svelte  PluginMenu.svelte  PluginUpdateDialog.svelte  ProgressiveScanStatus.svelte  QueuePanel.svelte  SearchResults.svelte  Settings.svelte  Sidebar.svelte  ThemeSettings.svelte  TitleBar.svelte  Toast.svelte  ToastContainer.svelte  TrackList.svelte  UpdatePopup.svelte  Virtualizedgrid.svelte
src/lib/plugins/: event-emitter.ts  marketplace.ts  plugin-storage.ts  registry.json  runtime.ts  schema.ts  ui-slots.ts
src/lib/services/: downloadService.ts  native-audio.ts  playlistHelpers.ts
src/lib/stores/: library.ts  lyrics.ts  mobile.ts  multiselect.ts  persist.ts  player.ts  plugin-store.ts  progressiveScan.ts  search.ts  settings.ts  theme.ts  ui.ts  view.ts
src/routes/: +layout.svelte  +page.svelte
