[package]
name = "audion"
version = "1.1.10"
description = "A local Spotify-style music player"
authors = ["AvKov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

# dirs for cross-platform app data paths
dirs = "5"

# File scanning
walkdir = "2"

# Audio metadata extraction
lofty = "0.22.4"

# Metadata Writing
mp4ameta = "0.11"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# Base64 encoding for album art
base64 = "0.22"

# HTTP client for API requests
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "rustls-tls"] }
futures = "0.3"

# Error handling
thiserror = "1"
tokio = { version = "1.49.0", features = ["full"] }

# Hash Compare
sha2 = "0.10"

# Parallel processing
rayon = "1.10" 

 # Thread-safe channels
crossbeam = "0.8"

# Move files to trash instead of permanent deletion (security, desktop only)
# trash is in [target.'cfg(desktop)'.dependencies]

# Logging for audit trail
log = "0.4"
env_logger = "0.11"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
# Discord RPC (desktop only - uses local IPC sockets)
discord-rich-presence = "1.0"
# Move files to trash (desktop only)
trash = "5"
# Global keyboard shortcuts (desktop only)
tauri-plugin-global-shortcut = "2"
